--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.12)
 project(raycastergl)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -78,11 +78,34 @@ set(RAYCASTERGL_SHADERS
 )
 include_directories(raycastergl/headers)
 
+file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/download.cmake 
+  "file(DOWNLOAD https://lodev.org/cgtutor/files/wolftex.zip ${CMAKE_CURRENT_BINARY_DIR}/wolftex.zip)"
+)
+file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/extract.cmake 
+  "file(ARCHIVE_EXTRACT INPUT ${CMAKE_CURRENT_BINARY_DIR}/wolftex.zip DESTINATION ${CMAKE_CURRENT_BINARY_DIR})"
+)
+
+add_custom_command(
+  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pics/eagle.png
+  COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/download.cmake
+  COMMAND ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/extract.cmake
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  VERBATIM
+)
+add_custom_target(textures DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/pics/eagle.png)
+
+set_target_properties(textures
+  PROPERTIES
+  ADDITIONAL_CLEAN_FILES ${CMAKE_CURRENT_BINARY_DIR}/pics
+)
+
 add_executable(raycastergl
     ${RAYCASTERGL_HEADERS}
     ${RAYCASTERGL_SOURCES}
     ${RAYCASTERGL_SHADERS}
 )
+add_dependencies(raycastergl textures)
+
 target_link_libraries(raycastergl
     GLAD
     yaml-cpp
@@ -93,4 +116,5 @@ target_link_libraries(raycastergl
 add_custom_target(
     copy_resources ALL
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/raycastergl/res $<TARGET_FILE_DIR:${PROJECT_NAME}>/res
+    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_BINARY_DIR}/pics $<TARGET_FILE_DIR:${PROJECT_NAME}>/res/textures
 )
